--- a/package.json
+++ b/package.json
@@ -14,19 +14,24 @@
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
     "@babel/node": "^7.8.7",
+    "@babel/preset-env": "^7.9.5",
     "@babel/preset-typescript": "^7.9.0",
     "@types/jest": "^25.2.1",
+    "@types/jsonwebtoken": "^8.3.9",
     "@types/node": "^13.11.1",
     "babel": "^6.23.0",
     "babel-jest": "^25.3.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^25.4.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
+    "mongoose-paginate-v2": "^1.3.9",
     "nodemon": "^2.0.3",
     "ts-node": "^8.9.0",
     "typescript": "^3.8.3"
